Revision history for {{$dist->name}}

{{$NEXT}}

  [ENHANCEMENT]

    * Net::Object::Peer::Subscriptions: new methods: find, nelem


0.03      2016-12-27 17:48:29-05:00 America/New_York (TRIAL RELEASE)

  [BUG FIX]

    * DEMOLISH was implemented by role, rather than being modified.


0.02      2016-12-26 17:41:04-05:00 America/New_York (TRIAL RELEASE)

  [BUG FIX]
    * Listener didn't properly weaken reference to peer object

  [DOCUMENTATION]
    * better synopsis

0.01      2016-12-26 17:41:04-05:00 America/New_York (TRIAL RELEASE)